--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,15 +27,15 @@
             <div class="footer">
               <div class="contact">
                 <p>
-                  Your Name<br />
-                  What You Are<br />
-                  your@email.com
+                  Jef Armstrong<br />
+                  Co-founder <a href="https://www.cuenotes.com">CueNotes.com</a><br />
+                  jef@cuenotes.com
                 </p>
               </div>
               <div class="contact">
                 <p>
-                  <a href="http://github.com/yourusername/">github.com/yourusername</a><br />
-                  <a href="http://twitter.com/yourusername/">twitter.com/yourusername</a><br />
+                  <a href="http://github.com/yourusername/">github.com/jefarmstrong</a><br />
+                  <a href="http://twitter.com/yourusername/">twitter.com/jefarmstrong</a><br />
                 </p>
               </div>
             </div>
