--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -30,7 +30,7 @@
 <body>
   <section class="sidebar">
     <a href="/">
-      <img src="{{ site.avatar_url }}?s=150" height="75" width="75" class="avatar" />
+      <img src="{{site.url}}/{{site.avatar_url}}?s=150" height="75" width="75" class="avatar" />
     </a>
 
     <section class="name">
@@ -48,7 +48,7 @@
 
     <section class="sections">
       <ul>
-        <li><a href="/about.html">about</a></li>
+        <li><a href="/pages/cv.html">cv</a></li>
         <li><a href="/">posts</a></li>
       </ul>
     </section>
