added buddy post

--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -48,7 +48,7 @@
 
     <section class="sections">
       <ul>
-        <li><a href="/pages/cv.html">cv</a></li>
+        <li><a href="/pages/cv.html" title="it's really just a resume">cv / resume</a></li>
         <li><a href="/">posts</a></li>
       </ul>
     </section>
