--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,32 +2,15 @@
 layout: layout
 ---
 
-<section class="content">
+<div class="col col-sm-8 col-sm-offset-2">
   <h1>
     <a href="{{ page.url }}">{{ page.title }}</a>
   </h1>
 
-  <section class="byline">
+  <section class="byline" style="margin-bottom:30px;">
     {{ page.date | date: "%B %e, %Y" }}
   </section>
 
   {{ content }}
-
-  <!-- TODO: bio here -->
-  <section class="meta">
-    <h3>Discussion, links, and tweets</h3>
-    <section class="copy">
-      <a href="https://twitter.com/{{ site.twitter }}" target="_blank">
-        <img src="{{site.url}}/{{site.avatar_url}}?s=142" height="50" width="50" />
-      </a>
-
-      <p>
-        I'm a co-founder and developer at <a href="https://www.cuenotes.com">CueNotes.com</a>. <a href="https://twitter.com/{{ site.twitter }}" target="_blank">Follow me on Twitter</a>;
-      </p>
-
-      <a href="http://twitter.com/share" class="twitter-share-button" data-count="none" data-via="{{ site.twitter }}">Tweet</a>
-      <a href="http://twitter.com/{{ site.twitter }}" class="twitter-follow-button" data-show-count="false">Follow @{{ site.twitter }}</a>
-      <script src="http://platform.twitter.com/widgets.js" type="text/javascript"></script>
-    </section>
-  </section>
-</section>
+  
+</div>
