--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -19,11 +19,7 @@
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="/css/base.css" rel="stylesheet" type="text/css">
 
-    <!-- <link rel="stylesheet" href="/css/pygments.css" type="text/css" /> -->
-    <!-- <link media="only screen and (max-device-width: 480px)" href="/css/mobile.css" type="text/css" rel="stylesheet" /> -->
-    <!-- <link media="only screen and (device-width: 768px)" href="/css/mobile.css" type="text/css" rel="stylesheet" /> -->
     <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
-    <!-- <link href='http://fonts.googleapis.com/css?family=Yanone+Kaffeesatz' rel='stylesheet' type='text/css'> -->
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
 
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
@@ -73,6 +69,14 @@
     <div class="row">
       {{ content }}
     </div>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
+      ga('create', 'UA-3319562-1', 'auto');
+      ga('send', 'pageview');
+    </script>
 </body>
 </html>
