--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -67,6 +67,9 @@
         <div class="row">
           {{ content }}
         </div>
+        <div class="row" style="margin-top:30px;">
+
+        </div>
     </div>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
