--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -25,52 +25,46 @@
 </head>
 
 <body>
-    <div class="container">
-        <nav class="navbar navbar-default">
-            <div class="container-fluid">
-                <!-- Brand and toggle get grouped for better mobile display -->
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <div class="header-title">
-                        <a href="/" class="">
-                            <img src="{{site.avatar_url}}?s=150" class="img-circle" />
-                            <div class="h2">Jef Armstrong</div>
-                        </a>
-                    </div>
-                </div>  
-                <div class="collapse navbar-collapse" id="navbar">
-                    <ul class="nav navbar-nav navbar-right">
-                        <li><a href="/pages/portfolio.html">Portfolio</a></li>
-                        <li><a href="/pages/resume.html">Resume</a></li>
-                        <li><a href="/pages/blog.html">Blog</a></li>
-                        <li><a href="/pages/contact.html">Contact</a></li>
-                        <li><a href="/pages/contact.html"><i class="fa fa-envelope-o"></i></a></li>
-                        <li><a href="https://github.com/{{ site.github }}" target="_blank"><i class="fa fa-github"></i></a></li>
-                        <li><a href="https://twitter.com/{{ site.twitter }}" target="_blank"><i class="fa fa-twitter"></i></a></li>
-                        <li><a href="http://www.linkedin.com/in/{{ site.linkedin }}" target="_blank"><i class="fa fa-linkedin"></i></a></li>
-        
-        
-                    </ul>                
-                </div>
-            </div>   
-        </nav>
-        <div class="row row-space">
-            <div class="col-sm-8 col-sm-offset-2 border-top">
-                &nbsp;
+    <header class="navbar navbar-static-top" id="top" role="banner">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".ja-navbar-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a href="/" class="navbar-brand">Jef Armstrong</a>
+            </div>  
+            <div class="collapse navbar-collapse ja-navbar-collapse">
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="/pages/portfolio.html">Portfolio</a></li>
+                    <li><a href="/pages/resume.html">Resume</a></li>
+                    <li><a href="/pages/blog.html">Blog</a></li>
+                    <li><a href="/pages/contact.html">Contact</a></li>
+                    <li><a href="/pages/contact.html"><i class="fa fa-envelope-o"></i></a></li>
+                    <li><a href="https://github.com/{{ site.github }}" target="_blank"><i class="fa fa-github"></i></a></li>
+                    <li><a href="https://twitter.com/{{ site.twitter }}" target="_blank"><i class="fa fa-twitter"></i></a></li>
+                    <li><a href="http://www.linkedin.com/in/{{ site.linkedin }}" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+                </ul>                
             </div>
         </div>
-        <div class="row">
-          {{ content }}
-        </div>
-        <div class="row" style="margin-top:30px;">
+    </header>
+    <main id="content" role="main">
+        <div class="container-fluid">
+            <!-- <div class="row row-space">
+                <div class="col-sm-8 col-sm-offset-2 border-top">
+                    &nbsp;
+                </div>
+            </div> -->
+            <div class="row">
+              {{ content }}
+            </div>
+            <div class="row" style="margin-top:30px;">
 
+            </div>
         </div>
-    </div>
+    </main>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -81,7 +75,7 @@
       ga('send', 'pageview');
     </script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="/js/application.js"></script>
 
 </body>
