--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -76,6 +76,7 @@
     </script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="/js/parallax.min.js"></script>
     <script type="text/javascript" src="/js/application.js"></script>
 
 </body>
