added a footer, cleaned up blog posts

--- a/css/base.css
+++ b/css/base.css
@@ -63,7 +63,16 @@ img.thumb-left {
     padding-top:50px;
 }
 
-.jumbotron h1, .jumbotron h1 small {
+.jumbotron.home h1, .jumbotron h1 small {
     color:#fff;
     text-shadow:2px 2px 2px black;
+}
+.jumbotron.home a, .jumbotron.home a:visited, .jumbotron.home a:hover {
+    color:#fff;
+}
+
+footer {
+    margin:40px 0;
+    background-color: #eee;
+    padding:20px;
 }
